--- a/index.html
+++ b/index.html
@@ -2853,7 +2853,7 @@
                 <div id="avatar"></div>
             </div>
             <div class="column-inner">
-                <h1 style="font-size: xx-large; line-height:150%">HỒ XUÂN VĨNH(David Ho) <br>SENIOR SOFTWARE DEVELOPER
+                <h1 style="font-size: xx-large; line-height:130%"><br>HỒ XUÂN VĨNH(David Ho) <br>SENIOR SOFTWARE DEVELOPER
                     <h1>
             </div>
             <div class="column-inner">
