--- a/index.html
+++ b/index.html
@@ -2947,6 +2947,10 @@
                             <i class="fa fa-desktop fa-blue"></i> - <a target="_blank" href="http://cafedev.vn/">
                                 cafedev.vn</a>
                         </li>
+                         <li>
+                            <i class="fa fa-desktop fa-blue"></i> - <a target="_blank" href="https://xuanvinhtd.github.io/share_my_dev_exps/">
+                                Wesite to share my Exps</a>
+                        </li>
                         <li>
                             <i class="fa fa-address-card fa-blue"></i> - No. 138 Dang Huy Tru Str., Hoa Minh Ward, Lien
                             Chieu Dist., Da Nang City
