--- a/index.html
+++ b/index.html
@@ -2918,7 +2918,7 @@
                         the awesome people to bring knowledge to everyone
                         around the world through their small screens. Especially, I have "Share to learn" all of the new
                         tech, trends, my IT knowledge for all the Vietnam Developer by <a target="_blank"
-                            href="http://cafedev.vn/">
+                            href="https://xuanvinhtd.github.io/share_my_dev_exps/">
                             my website.
                         </a>
                     </p>
