--- a/index.html
+++ b/index.html
@@ -3003,13 +3003,28 @@
                         <div class="expertise mb-20 clearfix">
                             <div class="exp-ico">
                                 <span class="ico">
-                                    <i class="fa fa-android fa-blue"></i>
+                                    <i class="fa fa-mobile fa-blue"></i>
                                 </span>
                             </div>
                             <div class="exp-det">
-                                <h6>Android Development</h6>
+                                <h6>Cross platform app</h6>
                                 <p>
-                                    Create an application by Flutter.
+                                    Create an iOS/Android application by Flutter or React Native.
+                                </p>
+                            </div>
+                        </div>
+                        <!--Expertise-->
+                         <!--Expertise-->
+                        <div class="expertise mb-20 clearfix">
+                            <div class="exp-ico">
+                                <span class="ico">
+                                    <i class="fa fa-server fa-blue"></i>
+                                </span>
+                            </div>
+                            <div class="exp-det">
+                                <h6>Server development with by Python</h6>
+                                <p>
+                                    Create API for an application.
                                 </p>
                             </div>
                         </div>
@@ -3803,7 +3818,7 @@
             <!--End container-->
             <div class="container"></div>
             <div class="column-inner">
-                <div><a href="https://drive.google.com/file/d/1Suj785TfVMoh6GqdNczJclRix6l85U37/view?usp=sharing"
+                <div><a href="https://drive.google.com/file/d/1D68ctA-GxTQwTGrsg8Uat0AIVbfneHXG/view?usp=sharing"
                         target="_blank">Here to download CV pdf file</a>
                 </div>
             </div>
