--- a/index.html
+++ b/index.html
@@ -3094,12 +3094,26 @@
                                     <div class="exp">
                                         <div class="hgroup mb-5">
                                             <h4>
+                                                Mobile Leader &ndash;
+                                                Hiko Solution
+                                            </h4>
+                                            <h6>
+                                                DA NANG city, Feb 2021 &ndash;
+                                                <span class="current">Current</span>
+                                            </h6>
+                                        </div>
+                                        <p>
+                                            Manager the resource of Mobile Team, assign projects for sub-leader, and ensure project progress of the team mobile. Breakdown, estimation, assign and implement some tasks. Review code. Control the quality and support client release application on AppStore and Google Play.
+                                        </p>
+                                    </div>
+                                    <div class="exp">
+                                        <div class="hgroup mb-5">
+                                            <h4>
                                                 Team/Dev Leader &ndash;
                                                 Supremetech
                                             </h4>
                                             <h6>
-                                                DA NANG city, Feb 2020 &ndash;
-                                                <span class="current">Current</span>
+                                                DA NANG city, Feb 2020
                                             </h6>
                                         </div>
                                         <p>
@@ -3440,16 +3454,19 @@
 
                                         <div class="serv-det">
                                             <h5 class="mb-10">
-                                                Freelance Android Project
+                                                Freelance iOS/Android Project
                                             </h5>
                                             <p>
                                                 Cafedevn is a news app and provides tutorials about information
                                                 technology for Viet Nam Developer by my website.
-                                                Team size: 1 (developer and designer). Technology:
-                                                Flutter, Bloc pattern, SQLite, JSON, Firebase, OneSignal, Admob, Cache Image,Wordpress. Responsibility:
-                                                Breakdown and implement tasks, review code. Make a design for an app.
+                                                KFF Parent/Teacher is a utility app for parents and teachers. It provides methods to borrow, manager flashcards to learn English for Kids
+                                                Team size: 2 (developer and designer). Technology:
+                                                Flutter, Bloc pattern, SQLite, JSON, Firebase, OneSignal, Admob, Cache Image,Wordpress,Audio, Chart, In App Purchases. Responsibility:
+                                                Breakdown and implement tasks, review code.
                                                 Control the quality and release application on Google Play. 
-                                                <ol></ol>* Android App(Flutter) <a href="https://play.google.com/store/apps/details?id=com.vinh.cafedev&hl=vi&gl=US" target="_blank">- view</a> 
+                                                <ol></ol>* Cafedev Android App(Flutter) <a href="https://play.google.com/store/apps/details?id=com.vinh.cafedev&hl=vi&gl=US" target="_blank">- view</a> 
+                                                </ol>
+                                         <ol></ol>* Parrent KFF App(Flutter) <a href="https://play.google.com/store/apps/details?id=com.kff.parent" target="_blank">- Android</a> / <a href="https://apps.apple.com/us/app/aiparenting/id1566267635" target="_blank">- iOS</a>
                                                 </ol>
                                             </p>
                                         </div>
@@ -3483,7 +3500,28 @@
                                         </div>
                                     </li>
 
+                                     <li class="mb-60 clearfix">
+                                        <div class="serv-ico">
+                                            <span class="ico">
+                                                <i class="fa fa-steam-square"></i>
+                                            </span>
+                                        </div>
 
+                                        <div class="serv-det">
+                                            <h5 class="mb-10">
+                                                The Wallet/Live Stream app by Flutter or React Native
+                                            </h5>
+                                            <p>
+                                                Develop 3 projects about management money, Deposit/ Withdraw money on the wallet and a live stream app. Scrum team size:
+                                                4. Technology:
+                                                Flutter, GetX, React Native, Firebase, CodePush, CI-CD.
+                                                Responsibility:
+                                                Breakdown, estimation, assign and implement some tasks. Review code.
+                                                Control the quality and support client release application on AppStore.
+                                            </p>
+                                        </div>
+                                    </li>
+        
                                 </ul>
                             </div>
 
@@ -3818,7 +3856,7 @@
             <!--End container-->
             <div class="container"></div>
             <div class="column-inner">
-                <div><a href="https://drive.google.com/file/d/1D68ctA-GxTQwTGrsg8Uat0AIVbfneHXG/view?usp=sharing"
+                <div><a href="https://drive.google.com/file/d/18_vWSMuAZTj3FJCuk0XdtD1mFBcI5NVn/view?usp=sharing"
                         target="_blank">Here to download CV pdf file</a>
                 </div>
             </div>
