--- a/index.html
+++ b/index.html
@@ -3266,7 +3266,7 @@
                                         </li>
                                         <li>
                                             <h4>
-                                                Flutter/Java
+                                                Flutter/React Native
                                             </h4>
                                             <div class="rating">
                                                 <span></span>
@@ -3277,7 +3277,7 @@
                                             </div>
                                         </li>
                                         <li>
-                                            <h4>SQL, OOP, C#, C/C++</h4>
+                                            <h4>SQL, OOP, C#, C/C++<, Java /h4>
                                             <div class="rating">
                                                 <span></span>
                                                 <span></span>
@@ -3287,7 +3287,7 @@
                                             </div>
                                         </li>
                                         <li>
-                                            <h4>Server, Wordpress</h4>
+                                            <h4>Server, Wordpress, Blockchain</h4>
                                             <div class="rating">
                                                 <span></span>
                                                 <span></span>
@@ -3856,7 +3856,7 @@
             <!--End container-->
             <div class="container"></div>
             <div class="column-inner">
-                <div><a href="https://drive.google.com/file/d/18_vWSMuAZTj3FJCuk0XdtD1mFBcI5NVn/view?usp=sharing"
+                <div><a href="https://drive.google.com/file/d/1LsjMwF11YcxRtlAI9x5WNd4C5x-3YQF2/view?usp=sharing"
                         target="_blank">Here to download CV pdf file</a>
                 </div>
             </div>
