--- a/index.html
+++ b/index.html
@@ -3277,7 +3277,7 @@
                                             </div>
                                         </li>
                                         <li>
-                                            <h4>SQL, OOP, C#, C/C++<, Java /h4>
+                                            <h4>SQL, OOP, C#, C/C++, Java</h4>
                                             <div class="rating">
                                                 <span></span>
                                                 <span></span>
