--- a/index.html
+++ b/index.html
@@ -2907,7 +2907,7 @@
                     <p class="lead mt-40">
                         Vinh Ho.X is a lovely mobile developer located in
                         our lovely Earth. He has been working on it
-                        professionally for over 4 years with iOS, MacOS, WatchOS, Android.
+                        professionally for over 6.5 years with iOS/Android, MacOS, WatchOS.
                     </p>
                     <p class="mt-20">
                         My hometown is Quang Nam province. Now, I’m living and working at Da Nang city. My hobbies are
@@ -3103,7 +3103,7 @@
                                             </h6>
                                         </div>
                                         <p>
-                                            Manager the resource of Mobile Team, assign projects for sub-leader, and ensure project progress of the team mobile. Breakdown, estimation, assign and implement some tasks. Review code. Control the quality and support client release application on AppStore and Google Play.
+                                            Mobile team leader, develop more than 10 projects about management money with role development, review code, breakdown, estimation, assignment and implement some tasks. Control the quality, deadline and support client release application on AppStore and Google Play. Research new techs, support technical for the project.
                                         </p>
                                     </div>
                                     <div class="exp">
@@ -3445,29 +3445,25 @@
                         <div class="block-service clearfix">
                             <div class="col-sm-4">
                                 <ul class="block-list-services">
-                                    <li class="mb-60 clearfix">
+                                    
+                                     <li class="mb-60 clearfix">
                                         <div class="serv-ico">
                                             <span class="ico">
-                                                <i class="fa fa-shield"></i>
+                                                <i class="fa fa-steam-square"></i>
                                             </span>
                                         </div>
 
                                         <div class="serv-det">
                                             <h5 class="mb-10">
-                                                Freelance iOS/Android Project
+                                                The Wallet Blockchain/Live Stream app by Flutter or React Native
                                             </h5>
                                             <p>
-                                                Cafedevn is a news app and provides tutorials about information
-                                                technology for Viet Nam Developer by my website.
-                                                KFF Parent/Teacher is a utility app for parents and teachers. It provides methods to borrow, manager flashcards to learn English for Kids
-                                                Team size: 2 (developer and designer). Technology:
-                                                Flutter, Bloc pattern, SQLite, JSON, Firebase, OneSignal, Admob, Cache Image,Wordpress,Audio, Chart, In App Purchases. Responsibility:
-                                                Breakdown and implement tasks, review code.
-                                                Control the quality and release application on Google Play. 
-                                                <ol></ol>* Cafedev Android App(Flutter) <a href="https://play.google.com/store/apps/details?id=com.vinh.cafedev&hl=vi&gl=US" target="_blank">- view</a> 
-                                                </ol>
-                                         <ol></ol>* Parrent KFF App(Flutter) <a href="https://play.google.com/store/apps/details?id=com.kff.parent" target="_blank">- Android</a> / <a href="https://apps.apple.com/us/app/aiparenting/id1566267635" target="_blank">- iOS</a>
-                                                </ol>
+                                                Develop 3 projects about management money, Deposit/ Withdraw money on the wallet blockchain and a live stream app. Scrum team size:
+                                                4. Technology:
+                                                Flutter, GetX, React Native, Firebase, CodePush, CI-CD.
+                                                Responsibility:
+                                                Breakdown, estimation, assign and implement some tasks. Review code.
+                                                Control the quality and support client release application on AppStore.
                                             </p>
                                         </div>
                                     </li>
@@ -3499,25 +3495,30 @@
                                             </p>
                                         </div>
                                     </li>
-
-                                     <li class="mb-60 clearfix">
+                            
+                              <li class="mb-60 clearfix">
                                         <div class="serv-ico">
                                             <span class="ico">
-                                                <i class="fa fa-steam-square"></i>
+                                                <i class="fa fa-shield"></i>
                                             </span>
                                         </div>
 
                                         <div class="serv-det">
                                             <h5 class="mb-10">
-                                                The Wallet/Live Stream app by Flutter or React Native
+                                                Freelance iOS/Android Project
                                             </h5>
                                             <p>
-                                                Develop 3 projects about management money, Deposit/ Withdraw money on the wallet and a live stream app. Scrum team size:
-                                                4. Technology:
-                                                Flutter, GetX, React Native, Firebase, CodePush, CI-CD.
-                                                Responsibility:
-                                                Breakdown, estimation, assign and implement some tasks. Review code.
-                                                Control the quality and support client release application on AppStore.
+                                                Cafedevn is a news app and provides tutorials about information
+                                                technology for Viet Nam Developer by my website.
+                                                KFF Parent/Teacher is a utility app for parents and teachers. It provides methods to borrow, manager flashcards to learn English for Kids
+                                                Team size: 2 (developer and designer). Technology:
+                                                Flutter, Bloc pattern, SQLite, JSON, Firebase, OneSignal, Admob, Cache Image,Wordpress,Audio, Chart, In App Purchases. Responsibility:
+                                                Breakdown and implement tasks, review code.
+                                                Control the quality and release application on Google Play. 
+                                                <ol></ol>* Cafedev Android App(Flutter) <a href="https://play.google.com/store/apps/details?id=com.vinh.cafedev&hl=vi&gl=US" target="_blank">- view</a> 
+                                                </ol>
+                                         <ol></ol>* Parrent KFF App(Flutter) <a href="https://play.google.com/store/apps/details?id=com.kff.parent" target="_blank">- Android</a> / <a href="https://apps.apple.com/us/app/aiparenting/id1566267635" target="_blank">- iOS</a>
+                                                </ol>
                                             </p>
                                         </div>
                                     </li>
@@ -3856,7 +3857,7 @@
             <!--End container-->
             <div class="container"></div>
             <div class="column-inner">
-                <div><a href="https://drive.google.com/file/d/1LsjMwF11YcxRtlAI9x5WNd4C5x-3YQF2/view?usp=sharing"
+                <div><a href="https://drive.google.com/file/d/127Odt_k-Fa0TZeZPSKWXScPXzGYMOelV/view?usp=sharing"
                         target="_blank">Here to download CV pdf file</a>
                 </div>
             </div>
